<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb_theron_gazebo</name>
  <version>0.1.0</version>
  <description>
    The rb_theron_gazebo package
  </description>

  <maintainer email="info@robotnik.com">Robotnik</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb_theron_sim</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb_theron_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb_theron_sim/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 -->
  <exec_depend>robotnik_common</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- THERON -->
  <exec_depend>rb_theron_description</exec_depend>
  <exec_depend>rb_theron_control</exec_depend>

  <!-- GAZEBO -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>robotnik_sensors_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
